♻️ Endpoint | Sobre observatorio ok
