# storage/api-docs/api-docs.json
@@ -407,6 +407,89 @@
                     }
                 ]
             }
+        },
+        "/api/v1/sobre-observatorio": {
+            "get": {
+                "tags": [
+                    "sobre-observatorio"
+                ],
+                "summary": "Listado de los sobre-observatorio",
+                "description": "Devuelve un listado de los sobre-observatorio que están registrados en nuestro servidor",
+                "operationId": "sobre-observatorio",
+                "parameters": [
+                    {
+                        "name": "sort",
+                        "in": "query",
+                        "description": "Campo por el cual ordenar los resultados. Agregar un signo '-' al principio para orden descendente (ej. -name).",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Listado de los sobre-observatorio obtenido exitosamente."
+                    },
+                    "401": {
+                        "description": "No autorizado. Se requiere un token válido en el encabezado."
+                    },
+                    "403": {
+                        "description": "Token no provisto. Se requiere un token en el encabezado."
+                    },
+                    "500": {
+                        "description": "Error interno del servidor. Algo salió mal."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/sobre-observatorio/{id}": {
+            "get": {
+                "tags": [
+                    "sobre-observatorio"
+                ],
+                "summary": "Obtener un sobre-observatorio por su ID",
+                "description": "Devuelve un sobre-observatorio específico por su ID.",
+                "operationId": "get_sobre-observatorio_by_id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la sobre-observatorio a obtener.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "sobre-observatorio obtenido exitosamente."
+                    },
+                    "401": {
+                        "description": "No autorizado. Se requiere un token válido en el encabezado."
+                    },
+                    "403": {
+                        "description": "Token no provisto. Se requiere un token en el encabezado."
+                    },
+                    "404": {
+                        "description": "sobre-observatorio no encontrado."
+                    },
+                    "500": {
+                        "description": "Error interno del servidor. Algo salió mal."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
         }
     },
     "tags": [
@@ -421,6 +504,10 @@
         {
             "name": "Temáticas",
             "description": "Endpoints relacionados con los temáticas."
+        },
+        {
+            "name": "sobre-observatorio",
+            "description": "Endpoints relacionados con los sobre-observatorio."
         }
     ],
     "components": {
